Fix somes spacing, no animation to player hud in desktop and replace vh by svh cause somes elements are hide by appbar

--- a/front/src/assets/css/components/home/_credits.scss
+++ b/front/src/assets/css/components/home/_credits.scss
@@ -11,6 +11,11 @@
   color: var(--black);
   transition: transform 0.2s;
 
+  @media screen and (max-width: 767px) {
+    bottom: functions.rem(15);
+    font-size: functions.rem(20);
+  }
+
   &:hover,
   &:focus {
     transform: scale(0.8);
