--- a/front/src/assets/css/components/utils/_popin.scss
+++ b/front/src/assets/css/components/utils/_popin.scss
@@ -15,8 +15,8 @@
 
     @media screen and (max-width: 767px){
       width: 30px;
-      top: functions.rem(30);
-      right: functions.rem(30);
+      top: functions.rem(20);
+      right: functions.rem(20);
     }
 
     &:hover,
