--- a/front/src/assets/css/partials/_globals.scss
+++ b/front/src/assets/css/partials/_globals.scss
@@ -11,12 +11,12 @@
 
 html {
   display: flex;
-  min-height: 100vh;
+  min-height: 100svh;
 
   body {
     display: flex;
     flex: 1;
-    min-height: 100vh;
+    min-height: 100svh;
 
     #app {
       display: flex;
@@ -48,7 +48,7 @@ html {
 
     main {
       position: relative;
-      min-height: 100vh;
+      min-height: 100svh;
       width: 100%;
     }
   }
